[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stick-and-string"
version = "1.1.0"
description = "SAS 1.1 (Stick And String) — human-readable data serialization format. Parser, validator, and bidirectional JSON converter."
readme = "README.md"
license = { text = "Vexon Open-Control License (VOCL) 1.0" }
authors = [{ name = "Sourasish Das" }]
requires-python = ">=3.8"
keywords = ["sas", "stick-and-string", "parser", "serialization", "json", "config", "data-format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: File Formats",
]

[project.scripts]
sas = "sas_tools._cli:main"

[project.urls]
Homepage    = "https://github.com/yourname/stick-and-string"
Repository  = "https://github.com/yourname/stick-and-string"
Issues      = "https://github.com/yourname/stick-and-string/issues"

[tool.hatch.build.targets.wheel]
packages = ["sas_tools"]
